fix(config): allow all origin patterns for CORS and WebSocket connections